--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "babel-plugin-inline-dotenv",
   "version": "1.1.1",
-  "description": "Load your `.env` file and replace `process.env.MY_VARIABLE` with the value you set.",
-  "main": "index.js",
+  "description":
+    "Load your `.env` file and replace `process.env.MY_VARIABLE` with the value you set.",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brysgo/babel-plugin-inline-dotenv.git"
   },
-  "keywords": [
-    "babel",
-    "plugin",
-    "dotenv"
-  ],
+  "keywords": ["babel", "plugin", "dotenv"],
   "author": "Bryan Goldstein",
   "license": "ISC",
   "bugs": {
@@ -23,5 +21,13 @@
   "homepage": "https://github.com/brysgo/babel-plugin-inline-dotenv#readme",
   "dependencies": {
     "dotenv": "^2.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-register": "^6.2.0",
+    "mocha": "^3.5.3"
   }
 }
