--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-eslint": "^8.0.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-register": "^6.2.0",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "dotenv-expand": "^4.0.1"    
   }
 }
