--- a/test/fixtures/code-simple-env-variable-no-systemVar/.babelrc
+++ b/test/fixtures/code-simple-env-variable-no-systemVar/.babelrc
@@ -1,8 +1,7 @@
 {
   "plugins": [
     ["../../../src", {
-      "unsafe": true,
-      "systemVar":"overwrite",
+      "systemVar" : "disable",
       "transforms": [{
         "transform": "transform-lib"
       }]
