--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Load your `.env` file and replace `process.env.MY_VARIABLE` with the value you set.",
   "main": "src/index.js",
   "scripts": {
-    "test": "EXAMPLE_ENV_VAR_SYSTEM=system EXAMPLE_ENV_VAR_SECRET=secret mocha --require babel-core/register",
+    "test": "EXAMPLE_ENV_VAR_SYSTEM=system EXAMPLE_ENV_VAR_SECRET=secret mocha",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -26,11 +26,7 @@
     "dotenv": "^7.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
-    "babel-eslint": "^9.0.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-register": "^6.2.0",
     "dotenv-expand": "^5.1.0",
     "mocha": "6.1.4"
   }
